# Telecom_Billing_Simulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
data/: cdrs.csv  discount_rules.json  rate_plans.json  subscribers.csv  tax_rules.json  topups.csv
include/tbs/: Account.hpp  Cdr.hpp  Charge.hpp  Dataset.hpp  DiscountRule.hpp  Invoice.hpp  Money.hpp  RatePlan.hpp  TaxRule.hpp  Types.hpp
include/tbs/engines/: BillingEngine.hpp  DiscountEngine.hpp  PrepaidEngine.hpp  RatingEngine.hpp  RecurringChargeEngine.hpp  TaxEngine.hpp
include/tbs/io/: CsvReader.hpp  DataLoader.hpp  InvoiceWriter.hpp  Json.hpp  JsonLoader.hpp
src/: main.cpp
src/engines/: BillingEngine.cpp  DiscountEngine.cpp  PrepaidEngine.cpp  RatingEngine.cpp  RecurringChargeEngine.cpp  TaxEngine.cpp
src/io/: CsvReader.cpp  DataLoader.cpp  InvoiceWriter.cpp  JsonLoader.cpp
tests/: test_main.cpp
web/: package.json  server.js
web/public/: app.js  index.html  styles.css
web/sample/: postpaid.json  prepaid.json
